# Comfy3D-Studio

./: .gitignore  __init__.py  node.py  pyproject.toml
web/: 3d_viewport.js  3d_viewport_modular.js
web/js/: AssetLoader.js  BrushPanel.js  CommandHistory.js  InputHandler.js  Outliner.js  SceneSetup.js  SegmentationPanel.js  SelectionManager.js  ShadingManager.js  ThreeLoader.js  Toolbar.js  TransformManager.js  ViewportNode.js
