[project]
name = "Comfy3D-Studio"
description = "A ComfyUI node to manipulate 3D objects."
version = "0.1.0"
license = "MIT"
dynamic = ["dependencies"]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.dynamic]

[project.urls]
Repository = "https://github.com/Aero-Ex/Comfy3D-Studio.git"

[tool.comfy]
PublisherId = "aerox"
DisplayName = "Comfy3D-Studio"
Icon = ""
